@@ -1,3 +1,8 @@
+2004-10-14  Richard Hult  <richard@imendio.com>
+
+	* drw-break-window.c (drw_break_window_init): Remove unecessary
+	frame, fixes a bug with the transparent background.
+
 2004-07-28  Richard Hult  <richard@imendio.com>
 
 	* drw-break-window.c: Patch from Markus Berg <mberg@hp.com> to fix
